--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,17 @@
 {
   "functions": {
-    "*.php": {
-      "runtime": "vercel-php@0.6.0"
-    }
+    "api/*.php": { "runtime": "vercel-php@0.6.0" }
   },
+  "builds": [
+    {
+      "src": "*.php",
+      "use": "vercel-php@0.6.0"
+    },
+    {
+      "src": "*.css",
+      "use": "@vercel/static"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
