--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,22 @@
 {
   "builds": [
-    { "src": "*.php", "use": "vercel-php@0.6.0" },
-    { "src": "*.css", "use": "@vercel/static" }
+    {
+      "src": "*.php",
+      "use": "vercel-php@0.7.1"
+    },
+    {
+      "src": "*.css",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "*.js",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.php" }
+    {
+      "src": "/(.*)",
+      "dest": "/index.php"
+    }
   ]
 }
